--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     values-round/strings.xml for round devices.
     -->
     <string name="hello_world">Hello Square World!</string>
+    <string name="title_activity_gesture_ema">GestureEMAActivity</string>
+    <string name="title_activity_test">TestActivity</string>
 </resources>
